--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,5 @@ server.servlet.session.timeout=24h
 logging.level.org.springframework.boot.autoconfigure: error
 
 spring.mvc.pathmatch.matching-strategy: ant_path_matcher
+
+astral4x.server.port=8071
