--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8070
 spring.application.name=astral4xserver
 spring.cloud.nacos.discovery.server-addr=121.41.121.48:8848
 spring.cloud.nacos.config.server-addr=121.41.121.48:8848
-
+spring.to.host=www.godserver.cn:21000
 spring.profiles.active=prod
 
 spring.datasource.url=jdbc:mysql://www.godserver.cn:4406/4xtest
