--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.cloud.nacos.config.server-addr=121.41.121.48:8848
 spring.to.host=www.godserver.cn:21000
 spring.profiles.active=prod
 
+frp.serverId=1
+
 spring.datasource.url=jdbc:mysql://www.godserver.cn:4406/4xtest
 spring.datasource.username=4xtest
 spring.datasource.password=4xtest
